--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,41 +1,67 @@
 .App {
   text-align: center;
   background-color: white;
-  color: rgb(110,109,95);
-  font-size: 20px;
+  color: #444;
+  font-size: 11px;
+}
 
-  div {
-    margin: 10px;
-  }
-  .buttons {
-    display: flex;
-    flex-direction: column;
-  }
+.navigationTabs {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  position: relative;
+  top: 2px;
+  height: 16px;
+  list-style-type: none;
+  padding: 0;
+  font-size: 12px;
+  font-weight: 500;
+}
+.navigationTabs:before{
+  z-index: 1;
+}
+.navigationTabs:after {
+  content: "";
+  border-bottom: solid 1px #777;
+  width: 100%;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+}
 
-  button {
-    margin: 10px;
-  }
-  .response-area {
-    display: flex;
-    flex-direction: column;
-    span {
-      position: relative;
-      top: 0;
-      left: 0;
-    }
-    .response {
-      resize: vertical;
-      min-height: 2em;
-      height: 10em;
-      overflow-y: scroll;
-      border: thin solid darkslategrey;
-      background-color: rgba(0,0,255,0.1);
-      margin: 10px;
-      padding: 0;
-      font-size: small;
-      text-align: left;
-      white-space: pre-wrap;
-      user-select: text;
-    }
-  }
+.tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  height: 15px;
+  padding: 0 8px;
+  border-top: solid 1px #777;
+  border-left: solid 1px #777;
+  border-right: solid 1px #777;
+  width: fit-content;
+  cursor: pointer;
+  z-index: 0;
+  position: relative;
+  background-color: #fafafa;
+  letter-spacing: -0.1px;
+  color: #666;
+}
+.tab:active {
+  color: white;
+}
+.tab.selected {
+  background-color: #fff;
+  color: #444;
+  top: -1px;
+  height: 18px;
+  border-bottom: none;
+  z-index: 2;
+}
+.tab-content {
+  position: absolute;
+  top: 17px;
+  left: 0;
+  width: 100%;
 }
