--- a/src/components/measures/measures.scss
+++ b/src/components/measures/measures.scss
@@ -20,17 +20,12 @@
   }
 
   #measure-formulas {
-    margin-left: 3.2vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     .formula {
       &.hidden {
         display: none;
-      }
-      &.disabled {
-        background-color: #eaf8fd;
-        border: 1px solid #cfd7da;
-        color: #a3babd;
-        cursor: default;
-        pointer-events: none;
       }
     }
   }
@@ -44,9 +39,10 @@
   }
 
   button#add-measure {
+    margin-top: 15px;
     border-radius: 1.5px;
     color: black;
-    min-width: 180px;
+    width: 84px;
     border-radius: 1.5px;
     border: solid 1px #008cba;
     background-color: #dbf6ff;
@@ -54,5 +50,13 @@
     cursor: pointer;
     -webkit-transition: background-color 0.4s, color 0.4s;
     transition: background-color 0.4s, color 0.4s;
+
+    &.disabled {
+      background-color: #eaf8fd;
+      border: 1px solid #cfd7da;
+      color: #a3babd;
+      cursor: default;
+      pointer-events: none;
+    }
   }
 }
