--- a/src/components/measures/measures.scss
+++ b/src/components/measures/measures.scss
@@ -5,6 +5,34 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
+    .select-measure-dropdown {
+      position: relative;
+      width: 160px;
+      height: 22px;
+      margin: 0 5px 0 0;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      select {
+        appearance: none;
+        -webkit-appearance: none;
+        width: 100%;
+        height: 100%;
+        padding: 1px 8px 1px 8px;
+        border-radius: 1.5px;
+        border: solid 1px #008cba;
+        background-color: #dbf6ff;
+        font-size: 11px;
+        cursor: pointer;
+      }
+      &::after {
+        content: url("../../assets/dropdown-arrow-icon.svg");
+        position: absolute;
+        right: 0;
+        pointer-events: none;
+      }
+    }
   }
 
   #select-measure {
@@ -24,10 +52,75 @@
     flex-direction: row;
     align-items: center;
     .formula {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
       &.hidden {
         display: none;
       }
+      .formula-paren {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .formula-dropdown {
+          position: relative;
+          width: 160px;
+          height: 22px;
+          margin: 0 5px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+
+          select {
+            appearance: none;
+            -webkit-appearance: none;
+            width: 100%;
+            height: 100%;
+            padding: 1px 8px 1px 8px;
+            border-radius: 1.5px;
+            border: solid 1px #008cba;
+            background-color: #dbf6ff;
+            font-size: 11px;
+            cursor: pointer;
+          }
+          &::after {
+            content: url("../../assets/dropdown-arrow-icon.svg");
+            position: absolute;
+            right: 0;
+            pointer-events: none;
+          }
+        }
+      }
     }
+    // .formula-dropdown {
+    //   position: relative;
+    //   width: 160px;
+    //   height: 22px;
+    //   margin: 0 5px 0 0;
+    //   display: flex;
+    //   flex-direction: row;
+    //   align-items: center;
+
+    //   select {
+    //     appearance: none;
+    //     -webkit-appearance: none;
+    //     width: 100%;
+    //     height: 100%;
+    //     padding: 1px 8px 1px 8px;
+    //     border-radius: 1.5px;
+    //     border: solid 1px #008cba;
+    //     background-color: #dbf6ff;
+    //     font-size: 11px;
+    //     cursor: pointer;
+    //   }
+    //   &::after {
+    //     content: url("../../assets/dropdown-arrow-icon.svg");
+    //     position: absolute;
+    //     right: 0;
+    //     pointer-events: none;
+    //   }
+    // }
   }
 
   #measures-bottom {
