feat: Added multi-device support [PT-186711774]
NOTE: this does not draw the arrows between devices.

--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -74,5 +74,8 @@
     border: solid 1px #008cba;
     background-color: #dbf6ff;
     font-size: 11px;
+    &:disabled {
+      opacity: 0.4;
+    }
   }
 }
