--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -3,13 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 15px 20px 0 20px;
+  margin: 15px 0;
 }
 .device-container {
   width: 180px;
   height: 209px;
-  margin: 5px 18px 5px 0;
-  padding: 1px 1px 39.5px;
+  margin: 5px 0;
+  padding-bottom: 39.5px;
   border-radius: 5px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.35);
   border: solid 1px #008cba;
