--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -15,6 +15,12 @@
   border: solid 1px #008cba;
   background-color: #fff;
   position: relative;
+  .set-input {
+    margin-top: 50%;
+    textarea {
+      width: 50%;
+    }
+  }
 }
 .device-status-icon {
   position: absolute;
