--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -12,3 +12,17 @@
     stroke: #008cba;
   }
 }
+
+.arrow-label {
+  position: absolute;
+
+  div {
+    cursor: pointer;
+    border: 1px solid #000;
+    padding: 3px 6px;
+    background-color: white;
+    font-size: 11px;
+    font-weight: 500;
+    color: #000;
+  }
+}
