--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -3,6 +3,10 @@
   background-color: white;
   color: #444;
   font-size: 11px;
+
+  button, input, select {
+    font-size: 11px;
+  }
 }
 
 .navigationTabs {
