Add wedges to spinner.

--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -20,6 +20,11 @@
       width: 50%;
     }
   }
+  .device-svg-container {
+    width: 130px;
+    height: 209px;
+    margin-right: 10px;
+  }
 }
 .device-status-icon {
   position: absolute;
