--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -147,6 +147,7 @@ $teal-dark: #177991;
   flex-direction: row;
   align-items: center;
   justify-content: left;
+  flex-wrap: wrap;
   background-color: rgba(0, 140, 186, 0.2);
   width: 100%;
   padding: 4px 12px;
@@ -155,7 +156,7 @@ $teal-dark: #177991;
     display: flex;
     flex-direction: row;
     align-items: center;
-
+    width: 350px;
 
     .select-repeat-dropdown {
       position: relative;
@@ -235,14 +236,18 @@ $teal-dark: #177991;
       padding: 0 5px;
     }
   }
+
   .repeat-until-controls {
-    width: 100%;
+    width: 350px;
     height: 30px;
-    background-color: rgba(0, 140, 186, 0.2);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    &.wide {
+      width: 200px;
+      justify-content: left;
+    }
     span {
       margin: 0 4px;
     }
