--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -12,9 +12,12 @@
   padding-bottom: 39.5px;
   border-radius: 5px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.35);
-  border: solid 1px #008cba;
   background-color: #fff;
   position: relative;
+
+  &.selected {
+    border: solid 1px #008cba;
+  }
   .set-input {
     margin-top: 50%;
     textarea {
