--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -4,13 +4,16 @@
   align-items: center;
   justify-content: center;
   margin: 15px 0;
+  .device-column-header {
+    margin-bottom: 5px;
+  }
 }
 .device-container {
   width: 180px;
   height: 209px;
-  margin: 5px 0;
   padding-bottom: 39.5px;
   border-radius: 5px;
+  border: solid 1px transparent;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.35);
   background-color: #fff;
   position: relative;
