--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -1,28 +1,31 @@
-.arrow {
+.arrow-container {
   position: absolute;
 
-  marker {
-    polygon {
-      fill: #008cba;
+  .arrow {
+
+    marker {
+      polygon {
+        fill: #008cba;
+      }
+    }
+
+    line {
+      stroke-width: 3;
+      stroke: #008cba;
     }
   }
 
-  line {
-    stroke-width: 3;
-    stroke: #008cba;
-  }
-}
-
-.arrow-label {
-  position: absolute;
-
-  div {
-    cursor: pointer;
-    border: 1px solid #000;
-    padding: 3px 6px;
-    background-color: white;
-    font-size: 11px;
-    font-weight: 500;
-    color: #000;
+  .arrow-label {
+    position: relative;
+    z-index: 2;
+    div {
+      cursor: pointer;
+      border: 1px solid #000;
+      padding: 3px 6px;
+      background-color: white;
+      font-size: 11px;
+      font-weight: 500;
+      color: #000;
+    }
   }
 }
