--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -1,12 +1,7 @@
 .device-controls-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   margin: 15px 0;
-  .device-column-header {
-    margin-bottom: 5px;
-  }
+  position: relative;
+  top: 15px;
 }
 .device-container {
   width: 180px;
