--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -281,10 +281,29 @@ $teal-dark: #177991;
 .device-outputs-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: left;
   margin: 0 20px;
   gap: 40px;
+  position: absolute;
+
+  .device-column {
+    position: relative;
+    top: 23px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &.centered {
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+    }
+    .device-column-header {
+      margin: 5px;
+      position: absolute;
+      top: 0;
+    }
+  }
 }
 
 .help-modal {
