--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -18,14 +18,17 @@
   .arrow-label {
     position: relative;
     z-index: 2;
+
     div {
       cursor: pointer;
-      border: 1px solid #000;
-      padding: 3px 6px;
       background-color: white;
       font-size: 11px;
       font-weight: 500;
       color: #000;
+      width: 22px;
+      height: 22px;
+      border-radius: 1.5px;
+      border: solid 1px #8f8f9d;
     }
   }
 }
