--- a/src/components/model/device.scss
+++ b/src/components/model/device.scss
@@ -1,7 +1,9 @@
-.device-controls-container{
-  margin: 15px 0;
+.device-controls-container {
   position: relative;
-  top: 15px;
+  top: 25px;
+  &.multiple-columns {
+    top: 52px;
+  }
 }
 .device-container {
   width: 180px;
