--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -18,17 +18,38 @@
   .arrow-label {
     position: relative;
     z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 28px;
+    max-width: 100px;
+    height: 28px;
 
-    div {
+    &.editing {
+      padding: 1px;
+      border-radius: 4.5px;
+      border: solid 2px rgba(0,122,255, 0.25);
+      background-color: #fff;
+    }
+
+    .label-form {
+      input {
+        min-width: 22px;
+      }
+    }
+    .label-span {
       cursor: pointer;
       background-color: white;
       font-size: 11px;
       font-weight: 500;
       color: #000;
-      width: 22px;
       height: 22px;
       border-radius: 1.5px;
       border: solid 1px #8f8f9d;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 8px;
     }
   }
 }
