--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -21,9 +21,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 28px;
+    min-width: 22px;
     max-width: 100px;
-    height: 28px;
+    min-height: 22px;
+    font-size: 11px;
+    font-weight: 500;
+    color: #000;
 
     &.editing {
       padding: 1px;
@@ -31,25 +34,16 @@
       border: solid 2px rgba(0,122,255, 0.25);
       background-color: #fff;
     }
-
-    .label-form {
-      input {
-        min-width: 22px;
-      }
-    }
+    
     .label-span {
       cursor: pointer;
-      background-color: white;
-      font-size: 11px;
-      font-weight: 500;
-      color: #000;
-      height: 22px;
-      border-radius: 1.5px;
-      border: solid 1px #8f8f9d;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 8px;
+      padding: 4px 8px;
+      background-color: white;
+      border-radius: 1.5px;
+      border: solid 1px #8f8f9d;
     }
   }
 }
