--- a/src/components/model/device-footer.scss
+++ b/src/components/model/device-footer.scss
@@ -11,6 +11,7 @@
     border-radius: 1.5px;
     border: solid 1px #008cba;
     background-color: #dbf6ff;
+    cursor: pointer;
   }
 }
 .device-buttons {
