--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -5,18 +5,21 @@
 
     marker {
       .pulse {
-        fill: #FF6B3B;
+        fill: #008cba;
       }
     }
 
     line {
       stroke-width: 3;
       stroke: #008cba;
+      &.running {
+        stroke: #a2a2a2;
+      }
       &.pulse-line {
         visibility: hidden;
         &.visible {
           visibility: visible;
-          stroke: #FF6B3B;
+          stroke: #008cba;
         }
       }
     }
