Arrow animates on start.
BUG: doesn't reset after first run.
BUG: non-running arrow color should be blue not gray

--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -1,29 +1,29 @@
 .arrow-container {
   position: absolute;
 
-  .arrow {
+  // .arrow {
 
-    marker {
-      .pulse {
-        fill: #008cba;
-      }
-    }
+  //   marker {
+  //     .pulse {
+  //       fill: #008cba;
+  //     }
+  //   }
 
-    line {
-      stroke-width: 3;
-      stroke: #008cba;
-      &.running {
-        stroke: #a2a2a2;
-      }
-      &.pulse-line {
-        visibility: hidden;
-        &.visible {
-          visibility: visible;
-          stroke: #008cba;
-        }
-      }
-    }
-  }
+  //   line {
+  //     stroke-width: 3;
+  //     stroke: #008cba;
+  //     &.running {
+  //       stroke: #a2a2a2;
+  //     }
+  //     &.pulse-line {
+  //       visibility: hidden;
+  //       &.visible {
+  //         visibility: visible;
+  //         stroke: #008cba;
+  //       }
+  //     }
+  //   }
+  // }
 
   .arrow-label {
     position: relative;
