Add pointer cursor on hover to buttons.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,6 +4,12 @@
   color: #444;
   font-size: 11px;
 
+  button {
+    &:hover:not(.disabled) {
+      cursor: pointer;
+    }
+  }
+
   button, input, select {
     font-size: 11px;
   }
