--- a/src/components/model/arrow.scss
+++ b/src/components/model/arrow.scss
@@ -39,6 +39,10 @@
       &.disabled {
         cursor: default;
       }
+      &.invalid {
+        color: #f00;
+        border-color: #f00;
+      }
     }
   }
 }
