feat: Refactor animation [PT-187271348]
This refactors how the animation is handled in the plugin and moves the CODAP functions out of a hook and into a helpers file.

The main refactor is having the components per device register themselves when they mount with a callback function that is invoked when that device needs to animate.  This reduces the complexity of the components and allows the animation system to be able to pause and stop the animations.

The callback is called with the current animation settings that the component can use for animation.

--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -324,10 +324,15 @@ $pluginMinWidth: 304px;
 
       .attr-name {
         width: 40px;
-        margin: 0 70px 27px;
+        margin: 0 70px 8px;
         border-radius: 1.5px;
         border: solid 1px #8f8f9d;
         background-color: #fff;
+      }
+
+      .device-column-header-label {
+        font-size: 16px;
+        font-weight: 500;
       }
     }
   }
