feat: Add animated output brackets [PT-187250197] [PT-187250183]

--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -301,7 +301,7 @@ $pluginMinWidth: 304px;
   display: flex;
   flex-direction: row;
   justify-content: left;
-  margin: 0 20px;
+  margin: 0 10px 0 20px;
   gap: 40px;
   position: absolute;
 
