fix: Layout issues [PT-188331349]
- Sets app to use fix full window layout
- Removes width of header so it expands to fill layout
- Styles about tab

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -3,6 +3,11 @@
   background-color: white;
   color: #444;
   font-size: 11px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 
   button {
     &:hover:not(:disabled):not(.disabled) {
