--- a/src/components/model/device-footer.scss
+++ b/src/components/model/device-footer.scss
@@ -12,6 +12,9 @@
     border: solid 1px #008cba;
     background-color: #dbf6ff;
   }
+  button:disabled {
+    border: solid 1px #008cbacc;
+  }
 }
 .device-buttons {
   display: flex;
@@ -26,6 +29,9 @@
     border-radius: 1.5px;
     border: solid 1px #008cba;
     background-color: #dbf6ff;
+  }
+  button:disabled {
+    border: solid 1px #008cbacc;
   }
   button.selected {
     box-shadow: inset 0 1px 4px 0 rgba(0, 0, 0, 0.6);
@@ -44,9 +50,9 @@
     border-radius: 1.5px;
     border: solid 1px #008cba;
     background-color: #dbf6ff;
-
-    &:disabled {
-      opacity: 0.4;
-    }
   }
+  button:disabled {
+    border: solid 1px #008cbacc;
+  }
+
 }
