--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -7,244 +7,292 @@ $pluginMinWidth: 304px;
 
 .model-header {
   min-width: $pluginMinWidth;
-  width: 100%;
 }
 .model-controls {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: left;
-  width: 100%;
-  padding: 4px 12px;
   background-color: rgba(0, 140, 186, 0.3);
 
-  button {
+  .inner-controls {
+    margin: 0 12px;
+    padding: 4px 0;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    height: 22px;
-    width: 52px;
-    color: black;
-    letter-spacing: 0.01px;
-    margin: 0 5px 0 0;
-    border-radius: 1.5px;
-    border: solid 1px #008cba;
-    background-color: #dbf6ff;
+    justify-content: left;
 
-    &.disabled {
-      opacity: 0.4;
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 22px;
+      width: 52px;
+      color: black;
+      letter-spacing: 0.01px;
+      margin: 0 5px 0 0;
       border-radius: 1.5px;
       border: solid 1px #008cba;
       background-color: #dbf6ff;
+
+      &.disabled {
+        opacity: 0.4;
+        border-radius: 1.5px;
+        border: solid 1px #008cba;
+        background-color: #dbf6ff;
+      }
     }
-  }
 
-  .speed-slider {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 8px;
-    width: 88px;
-    position: relative;
-
-    .tick-marks-container {
+    .speed-slider {
       display: flex;
       flex-direction: row;
-      align-content: stretch;
-      justify-content: space-between;
-      font-size: 14px;
-      font-weight: normal;
-      color: #777;
-      width: 32px;
-      height: 22px;
-      position: absolute;
-      left: 8px;
-      top: 2px;
+      align-items: center;
+      margin: 0 8px;
+      width: 88px;
+      position: relative;
 
-      .tick-mark {
+      .tick-marks-container {
         display: flex;
-        justify-content: center;
-        .tick-line {
-          width: 1px;
-          height: 9px;
-          background-color: #777;
+        flex-direction: row;
+        align-content: stretch;
+        justify-content: space-between;
+        font-size: 14px;
+        font-weight: normal;
+        color: #777;
+        width: 32px;
+        height: 22px;
+        position: absolute;
+        left: 8px;
+        top: 2px;
+
+        .tick-mark {
+          display: flex;
+          justify-content: center;
+          .tick-line {
+            width: 1px;
+            height: 9px;
+            background-color: #777;
+          }
         }
       }
-    }
 
-    input[type='range'],
-    input[type='range']::-webkit-slider-runnable-track,
-    input[type='range']::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 45px;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    input[type='range']::-webkit-slider-runnable-track {
-      box-sizing: border-box;
-      width: 45px;
-      height: 4px;
-      border-radius: 2px;
-      background: #777;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    input[type='range']::-moz-range-track {
-      box-sizing: border-box;
-      width: 45px;
-      height: 4px;
-      border-radius: 2px;
-      background: #777;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    input[type='range']::-webkit-slider-thumb {
-      box-sizing: border-box;
-      margin-top: -5px;
-      width: 13px;
-      height: 13px;
-      border-radius: 6.5px;
-      border: solid 1px #999;
-      background-color: #f0f0f0;
-      position: relative;
-      z-index: 2;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    input[type='range']::-moz-range-thumb {
-      box-sizing: border-box;
-      margin-top: -5px;
-      width: 13px;
-      height: 13px;
-      border-radius: 6.5px;
-      border: solid 1px #999;
-      background-color: #f0f0f0;
-      position: relative;
-      z-index: 2;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-
-    input[type='range']:focus{
-      outline: none;
-    }
-
-    circle:hover{
-      cursor: pointer;
-    }
-    text:hover{
-      cursor: pointer;
-    }
-  }
-
-  span {
-    margin: 0 2px;
-  }
-  .attr-name {
-    width: 56px;
-    height: 22px;
-    border-radius: 1.5px;
-    border: solid 1px #8f8f9d;
-    background-color: #fff;
-  }
-  button.clear-data-button {
-    width: 85px;
-  }
-}
-
-.select-repeat-controls {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: left;
-  flex-wrap: wrap;
-  background-color: rgba(0, 140, 186, 0.2);
-  width: 100%;
-  padding: 4px 12px;
-
-  .select-repeat-selection {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 350px;
-
-    .select-repeat-dropdown {
-      position: relative;
-      width: 67px;
-      height: 22px;
-      margin: 0 5px 0 0;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-      select {
-        appearance: none;
+      input[type='range'],
+      input[type='range']::-webkit-slider-runnable-track,
+      input[type='range']::-webkit-slider-thumb {
         -webkit-appearance: none;
-        width: 100%;
-        height: 100%;
-        padding: 1px 8px 1px 8px;
-        border-radius: 1.5px;
-        border: solid 1px #008cba;
-        background-color: #dbf6ff;
-        cursor: pointer;
-      }
-      &::after {
-        content: url("../../assets/dropdown-arrow-icon.svg");
-        position: absolute;
-        right: 0;
-        pointer-events: none;
-      }
-    }
-
-    .select-replacement-dropdown {
-      position: relative;
-      width: 138px;
-      height: 22px;
-      margin: 0 5px 0 0;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-      select {
-        appearance: none;
-        -webkit-appearance: none;
-        width: 100%;
-        height: 100%;
-        padding: 1px 8px 1px 8px;
-        border-radius: 1.5px;
-        border: solid 1px #008cba;
-        background-color: #dbf6ff;
-        cursor: pointer;
+        width: 45px;
+        &:hover {
+          cursor: pointer;
+        }
       }
 
-      .dropdown-arrow-icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-        cursor: pointer;
-        pointer-events: none;
+      input[type='range']::-webkit-slider-runnable-track {
+        box-sizing: border-box;
+        width: 45px;
+        height: 4px;
+        border-radius: 2px;
+        background: #777;
+        &:hover {
+          cursor: pointer;
+        }
       }
-      &::after {
-        content: url("../../assets/dropdown-arrow-icon.svg");
-        position: absolute;
-        right: 0;
-        pointer-events: none;
+
+      input[type='range']::-moz-range-track {
+        box-sizing: border-box;
+        width: 45px;
+        height: 4px;
+        border-radius: 2px;
+        background: #777;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      input[type='range']::-webkit-slider-thumb {
+        box-sizing: border-box;
+        margin-top: -5px;
+        width: 13px;
+        height: 13px;
+        border-radius: 6.5px;
+        border: solid 1px #999;
+        background-color: #f0f0f0;
+        position: relative;
+        z-index: 2;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      input[type='range']::-moz-range-thumb {
+        box-sizing: border-box;
+        margin-top: -5px;
+        width: 13px;
+        height: 13px;
+        border-radius: 6.5px;
+        border: solid 1px #999;
+        background-color: #f0f0f0;
+        position: relative;
+        z-index: 2;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+
+      input[type='range']:focus{
+        outline: none;
+      }
+
+      circle:hover{
+        cursor: pointer;
+      }
+      text:hover{
+        cursor: pointer;
       }
     }
 
     span {
-      margin: 0 4px;
+      margin: 0 2px;
     }
+    .attr-name {
+      width: 56px;
+      height: 22px;
+      border-radius: 1.5px;
+      border: solid 1px #8f8f9d;
+      background-color: #fff;
+    }
+    button.clear-data-button {
+      width: 85px;
+    }
+  }
+}
+
+.select-repeat-controls {
+  background-color: rgba(0, 140, 186, 0.2);
+
+  .inner-controls {
+    margin: 0 12px;
+    padding: 4px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    flex-wrap: wrap;
+
+    .select-repeat-selection {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      width: 350px;
+
+      .select-repeat-dropdown {
+        position: relative;
+        width: 67px;
+        height: 22px;
+        margin: 0 5px 0 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        select {
+          appearance: none;
+          -webkit-appearance: none;
+          width: 100%;
+          height: 100%;
+          padding: 1px 8px 1px 8px;
+          border-radius: 1.5px;
+          border: solid 1px #008cba;
+          background-color: #dbf6ff;
+          cursor: pointer;
+        }
+        &::after {
+          content: url("../../assets/dropdown-arrow-icon.svg");
+          position: absolute;
+          right: 0;
+          pointer-events: none;
+        }
+      }
+
+      .select-replacement-dropdown {
+        position: relative;
+        width: 138px;
+        height: 22px;
+        margin: 0 5px 0 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        select {
+          appearance: none;
+          -webkit-appearance: none;
+          width: 100%;
+          height: 100%;
+          padding: 1px 8px 1px 8px;
+          border-radius: 1.5px;
+          border: solid 1px #008cba;
+          background-color: #dbf6ff;
+          cursor: pointer;
+        }
+
+        .dropdown-arrow-icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+          cursor: pointer;
+          pointer-events: none;
+        }
+        &::after {
+          content: url("../../assets/dropdown-arrow-icon.svg");
+          position: absolute;
+          right: 0;
+          pointer-events: none;
+        }
+      }
+
+      span {
+        margin: 0 4px;
+      }
+
+      input {
+        width: 34px;
+        height: 22px;
+        border-radius: 1.5px;
+        border: solid 1px #8f8f9d;
+        background-color: #fff;
+        margin: 0 2px;
+        padding: 0 5px;
+      }
+    }
+
+    .repeat-until-controls {
+      width: 350px;
+      height: 30px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      &.wide {
+        width: 200px;
+        justify-content: left;
+      }
+      span {
+        margin: 0 4px;
+      }
+      input {
+        margin: 0 5px;
+      }
+    }
+  }
+}
+
+.collect-controls {
+  background-color: rgba(0, 140, 186, 0.1);
+
+  .inner-controls {
+    margin: 0 12px;
+    padding: 4px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    font-weight: 500;
 
     input {
       width: 34px;
@@ -252,49 +300,9 @@ $pluginMinWidth: 304px;
       border-radius: 1.5px;
       border: solid 1px #8f8f9d;
       background-color: #fff;
-      margin: 0 2px;
+      margin: 0 3px;
       padding: 0 5px;
     }
-  }
-
-  .repeat-until-controls {
-    width: 350px;
-    height: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    &.wide {
-      width: 200px;
-      justify-content: left;
-    }
-    span {
-      margin: 0 4px;
-    }
-    input {
-      margin: 0 5px;
-    }
-  }
-}
-
-.collect-controls {
-  width: 100%;
-  background-color: rgba(0, 140, 186, 0.1);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: left;
-  padding: 4px 12px;
-  font-weight: 500;
-
-  input {
-    width: 34px;
-    height: 22px;
-    border-radius: 1.5px;
-    border: solid 1px #8f8f9d;
-    background-color: #fff;
-    margin: 0 3px;
-    padding: 0 5px;
   }
 }
 
