feat: Add collector behavior [SAMPLER-25]

--- a/src/components/model/device-footer.scss
+++ b/src/components/model/device-footer.scss
@@ -29,6 +29,7 @@
     border-radius: 1.5px;
     border: solid 1px #008cba;
     background-color: #dbf6ff;
+    text-transform: capitalize;
   }
   button:disabled {
     border: solid 1px #008cbacc;
