--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,4 +2,17 @@
   text-align: left;
   padding: 10px 20px;
   font-size: 12px;
+
+  .funding {
+    display: flex;
+    gap: 10px;
+
+    p {
+      margin-top: 0;
+
+      .nsf-grant-id {
+        color: red;
+      }
+    }
+  }
 }
