--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,15 +4,12 @@
   font-size: 12px;
 
   .funding {
-    display: flex;
-    gap: 10px;
+    img {
+      float: right;
+    }
 
-    p {
-      margin-top: 0;
-
-      .nsf-grant-id {
-        color: red;
-      }
+    .nsf-grant-id {
+      color: red;
     }
   }
 }
