Changed modal text to label based on PR input

--- a/src/components/model/variable-setting-modal.scss
+++ b/src/components/model/variable-setting-modal.scss
@@ -29,6 +29,10 @@ $teal-dark: #177991;
       color: black;
       font-weight: 500;
     }
+    .set-variables-input-label {
+      display: block;
+      margin: 1em 0;
+    }
     .set-variables-input {
       width: 136px;
       height: 22px;
