Implement secure storage for password hashes and fix import resolution issues

--- a/src/components/model/password-modal.scss
+++ b/src/components/model/password-modal.scss
@@ -101,6 +101,16 @@
           }
         }
         
+        &.reset-button {
+          background-color: #f44336;
+          border: 1px solid #f44336;
+          color: white;
+          
+          &:hover {
+            background-color: #d32f2f;
+          }
+        }
+        
         &:last-child {
           background-color: #0078d7;
           border: 1px solid #0078d7;
