--- a/src/components/model/repeat-until.scss
+++ b/src/components/model/repeat-until.scss
@@ -10,18 +10,18 @@
   
   input {
     padding: 5px 8px;
-    border: 1px solid #ccc;
+    border: 1px solid #767676;
     border-radius: 4px;
     font-size: 14px;
     width: 250px;
     
     &:disabled {
       background-color: #f5f5f5;
-      color: #888;
+      color: #595959;
     }
     
     &::placeholder {
-      color: #aaa;
+      color: #767676;
       font-style: italic;
     }
   }
@@ -32,12 +32,12 @@
     height: 24px;
     border-radius: 50%;
     background-color: #f0f0f0;
-    border: 1px solid #ccc;
+    border: 1px solid #767676;
     font-weight: bold;
     cursor: pointer;
     
     &:hover {
-      background-color: #e0e0e0;
+      background-color: #b0b0b0;
     }
     
     &:disabled {
@@ -101,7 +101,7 @@
     
     button {
       padding: 8px 16px;
-      background-color: #007bff;
+      background-color: #0056b3;
       color: white;
       border: none;
       border-radius: 4px;
@@ -109,7 +109,7 @@
       font-size: 14px;
       
       &:hover {
-        background-color: #0069d9;
+        background-color: #003d80;
       }
     }
   }
